docker containers should automatically start/restart when docker does

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ web:
   environment:
     - FLASK_APP=/app/app.py
     - MONGO_HOST=mongodb
+  restart: always
 mongodb:
   ports:
     - "27017:27017"
   image: mongo
   command: --smallfiles
+  restart: always
